# qops

./: .gitignore  BENCHMARK_OVERVIEW.md  BENCHMARK_SCHEMA.md  Cargo.toml  HYPERCUBE_INTEGRATION.md  README.md  SLOTS_ENGINE_SPEC.md
.github/workflows/: benchmarks.yml
adapters/: Cargo.toml
adapters/src/: genesis_quantum.rs  lib.rs  seraphic_bridge.rs
algorithms/: Cargo.toml
algorithms/src/: error.rs  grover.rs  hamiltonian.rs  lib.rs  qaoa.rs  qft.rs  qpe.rs  shor.rs  vqe.rs
circuits/: Cargo.toml
circuits/src/: circuit.rs  error.rs  gates.rs  lib.rs  measurement.rs  noise.rs  qubit.rs  register.rs
cli/: Cargo.toml
cli/src/: main.rs
configs/: kernel_mining.toml
core/: Cargo.toml
core/src/: error.rs  field.rs  holistic.rs  ledger.rs  lib.rs  operators.rs  pipeline.rs  resonance.rs  signature.rs  topology.rs
core/tests/: holistic_tests.rs
docs/: CASCADE_EXPLORER_GUIDE.md  COMMANDS.md  COMPONENTS.md  GUI_README.md  HYPERCUBE_KERNEL_OVERVIEW.md  HYPERCUBE_STUDIO_GUIDE.md  HYPERSLOT_VISUAL_GUIDE.md  TAURI_ARCHITECTURE.md  TOPOLOGY_DASHBOARD.md  UX_RESEARCH.md  VISUAL_SYSTEM_OVERVIEW.md
genesis/: Cargo.toml
genesis/src/: agent.rs  artefact.rs  cubechain.rs  evolution.rs  family.rs  holistic_mining.rs  kno.rs  lib.rs  meta_cognition.rs  metatron_cube.rs  mining.rs  reporting.rs  traversal.rs
genesis/tests/: holistic_mining_tests.rs
gui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
gui/.svelte-kit/output/client/.vite/: manifest.json
gui/.svelte-kit/output/client/_app/: version.json
gui/.svelte-kit/output/client/_app/immutable/assets/: 5.BqzMmYRY.css  6.D2SNEShk.css
gui/.svelte-kit/output/client/_app/immutable/chunks/: C5T4VM2A.js  NkCg-FOY.js
gui/.svelte-kit/output/client/_app/immutable/nodes/: 5.DlZTQqxY.js  6.D7O1iUys.js  8.gvAEiQvH.js  9.5vyDIblL.js
gui/.svelte-kit/output/server/: index.js  manifest.js
gui/.svelte-kit/output/server/.vite/: manifest.json
gui/.svelte-kit/output/server/_app/immutable/assets/: _layout.Uwwhb2gy.css  _page.BbV3n7Y3.css
gui/.svelte-kit/output/server/chunks/: internal.js  shared.js  ssr.js
gui/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
gui/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/algorithm/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/circuit/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/genesis/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/hypercube/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/resonance/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/settings/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/slots/: _page.svelte.js
gui/.svelte-kit/output/server/entries/pages/topology/: _page.svelte.js
gui/.svelte-kit/output/server/nodes/: 0.js  1.js  10.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
gui/.svelte-kit/types/: route_meta_data.json
gui/.svelte-kit/types/src/routes/: $types.d.ts
gui/.svelte-kit/types/src/routes/algorithm/: $types.d.ts
gui/.svelte-kit/types/src/routes/circuit/: $types.d.ts
gui/.svelte-kit/types/src/routes/genesis/: $types.d.ts
gui/.svelte-kit/types/src/routes/hypercube/: $types.d.ts
gui/.svelte-kit/types/src/routes/resonance/: $types.d.ts
gui/.svelte-kit/types/src/routes/slots/: $types.d.ts
gui/.svelte-kit/types/src/routes/topology/: $types.d.ts
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
gui/src-tauri/src/commands/: algorithms.rs  calibration.rs  circuits.rs  genesis.rs  holistic.rs  holistic_stub.rs  hypercube.rs  kernel.rs  mod.rs  quantum.rs  research.rs  slots.rs  system.rs
gui/src/lib/components/: Coord5DDisplay.svelte  FamilyNetwork.svelte  HDAGGraph.svelte  HypercubeCanvas.svelte  ResonanceHeatmap.svelte  SlotMachineVisualizer.svelte  SpiralTrajectory.svelte  StageIndicator.svelte  index.ts
gui/src/lib/tauri/: commands.ts
gui/src/lib/visual/: BerryPhaseCompass.svelte  CascadePlayer.svelte  ChernGauge.svelte  ConvergenceGraph.svelte  OperatorFlow.svelte  StabilityMeter.svelte  TopologyPlot.svelte  VectorField.svelte  animations.ts  colors.ts  index.ts
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/routes/algorithm/: +page.svelte
gui/src/routes/circuit/: +page.svelte
gui/src/routes/genesis/: +page.svelte
gui/src/routes/hypercube/: +page.svelte
gui/src/routes/kernel/: +page.svelte
gui/src/routes/resonance/: +page.svelte
gui/src/routes/settings/: +page.svelte
gui/src/routes/slots/: +page.svelte
gui/src/routes/topology/: +page.svelte
hypercube/: Cargo.toml
hypercube/src/: artifact.rs  compiler.rs  coordinates.rs  cube.rs  edge.rs  error.rs  hdag.rs  lib.rs  operators.rs  session.rs  triton_mode.rs  vertex.rs
kernel/: Cargo.toml
kernel/src/: blueprint.rs  config.rs  domain_adapters.rs  error.rs  ledger.rs  lib.rs  materialization.rs  mining.rs  operators.rs  resonance.rs  state.rs
quantum/: Cargo.toml
quantum/src/: dtl.rs  graph.rs  hamiltonian.rs  lib.rs  quantum_walk.rs  state.rs  topology.rs  vqa.rs
research/: Cargo.toml
research/src/: analysis.rs  benchmark.rs  comparison.rs  error.rs  experiment.rs  lib.rs  qops_benchmarks.rs  report.rs  visualization.rs
seraphic/: Cargo.toml
seraphic/src/: analysis.rs  calibrator.rs  cri.rs  lib.rs  por.rs
slots/: Cargo.toml
slots/src/: entropy.rs  error.rs  generator.rs  hypercube_integration.rs  lattice.rs  lib.rs  miner.rs  session.rs  slot.rs  spin.rs  topology.rs
triton/: Cargo.toml
triton/src/: adaptive.rs  config.rs  layer.rs  lib.rs  optimizer.rs  refinement.rs  scoring.rs  search.rs  session.rs  spiral.rs  temperature.rs  topology_bias.rs
triton/tests/: adaptive_tests.rs.disabled
