[workspace]
members = [
    "core",
    "triton",
    "genesis",
    "quantum",
    "circuits",
    "algorithms",
    "research",
    "seraphic",
    "adapters",
    "hypercube",
    "slots",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QOPS Unified Team"]
license = "MIT"
repository = "https://github.com/LashSesh/qops"
description = "QOPS - Unified Quantum Operator Processing System"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Numerics
nalgebra = { version = "0.33", features = ["std"] }
num-complex = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Cryptography
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Graph structures
petgraph = { version = "0.6", features = ["serde-1"] }

# Parallel computing
rayon = "1.10"

# Logging & Tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
colored = "2.1"
indicatif = "0.17"

# Async Runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }

# Testing
approx = "0.5"

# Internal crates
qops-core = { path = "core" }
qops-genesis = { path = "genesis" }
qops-quantum = { path = "quantum" }
qops-circuits = { path = "circuits" }
qops-algorithms = { path = "algorithms" }
qops-research = { path = "research" }
qops-seraphic = { path = "seraphic" }
qops-adapters = { path = "adapters" }
qops-triton = { path = "triton" }
qops-hypercube = { path = "hypercube" }
qops-slots = { path = "slots" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
