[package]
name = "qops-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Adapters and bridges for QOPS integration"

[dependencies]
qops-core = { workspace = true }
qops-genesis = { workspace = true }
qops-quantum = { workspace = true }
qops-seraphic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
num-complex = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
