[package]
name = "qops-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for QOPS"

[[bin]]
name = "qops"
path = "src/main.rs"

[dependencies]
qops-core = { workspace = true }
qops-genesis = { workspace = true }
qops-quantum = { workspace = true }
qops-circuits = { workspace = true }
qops-algorithms = { workspace = true }
qops-research = { workspace = true }
qops-seraphic = { workspace = true }
qops-adapters = { workspace = true }
qops-triton = { workspace = true }
qops-hypercube = { workspace = true }
qops-slots = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
