[package]
name = "qops-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for QOPS - Unified Quantum Operator Processing System"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
