[package]
name = "qops-seraphic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Seraphic Calibration Shell - Meta-algorithm for QOPS"

[dependencies]
qops-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
