[package]
name = "qops-triton"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRITON Spiral Search Optimizer for Quantum Operator Mining"

[dependencies]
qops-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
